infrastructure/k3s/base/platform/namespace-scoped/network-policies/allow-monitoring.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-monitoring
  labels:
    caicedo.seguros/tier: platform
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: observability
      ports:
        - protocol: TCP
          port: 8081
        - protocol: TCP
          port: 9090
        - protocol: TCP
          port: 9100
        - protocol: TCP
          port: 9115
        - protocol: TCP
          port: 9187
        - protocol: TCP
          port: 3100
        - protocol: TCP
          port: 3101
        - protocol: TCP
          port: 9011
