infrastructure/k3s/base/platform/namespace-scoped/network-policies/deny-all-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all-ingress
  labels:
    caicedo.seguros/tier: platform
spec:
  podSelector: {}
  policyTypes:
    - Ingress
